delete button colour

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -470,7 +470,7 @@ body {
 }
 
 .custom-delete-btn {
-  background-color: #70619b;
+  background-color: #c2223fdd;
   color: white;
   border: none;
   border-radius: 0.5rem;
